<resources>
    <string name="app_name">SearchHYU</string>

    <!-- navigation drawer string -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_navigation">네비게이션</string>
    <string name="navigation_drawer_rest_area_by_route">노선별 휴게소</string>
    <string name="navigation_drawer_theme_rest_area">테마 휴게소</string>
    <string name="navigation_drawer_notice">공지</string>
    <string name="navigation_drawer_settings">설정</string>

    <!-- action string -->
    <string name="action_settings">Settings</string>
    <string name="action_search">search</string>

    <!-- network state message -->
    <string name="required_network">네트워크 연결확인바람</string>

    <!-- speech recognizer message -->
    <string name="speech_recognizer_prompt">검색어를 말하세요</string>

    <!-- notification message -->
    <string name="notification_exit">실행중... 종료하려면 클릭하세요</string>
</resources>
