<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_navigation"
            android:icon="@drawable/ic_navigation"
            android:title="@string/navigation_drawer_navigation" />
        <item
            android:id="@+id/nav_rest_area_by_route"
            android:icon="@drawable/ic_place"
            android:title="@string/navigation_drawer_rest_area_by_route" />
        <item
            android:id="@+id/nav_theme_rest_area"
            android:icon="@drawable/ic_theme_rest_area"
            android:title="@string/navigation_drawer_theme_rest_area" />
        <item
            android:id="@+id/nav_notice"
            android:icon="@drawable/ic_info"
            android:title="@string/navigation_drawer_notice" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/navigation_drawer_settings" />
    </group>
</menu>
